# zcash-android-wallet-poc

./: .gitignore  CHANGELOG.md  README.md  tag-release.sh
zcash-android-wallet-app/: README.md  build.gradle  build.gradle.kts  sdk  settings.gradle  settings.gradle.kts
zcash-android-wallet-app/app/: build.gradle  build.gradle.kts  zcash-lint-options.xml
zcash-android-wallet-app/app/libs/: zcash-android-wallet-sdk-1.2.3.aar
zcash-android-wallet-app/gradle/wrapper/: gradle-wrapper.properties
zcash-android-wallet-app/qrecycler/: build.gradle
zcash-android-wallet-app/zcash-android-welding/: .gitrepo  Cargo.toml  README.md  build-ndk-standalone.sh  build-rust.sh  build.gradle.kts  custom-tasks.gradle.kts
zcash-android-wallet-app/zcash-android-welding/src/androidTest/java/cash/z/wallet/sdk/: ExampleInstrumentedTest.java
zcash-android-wallet-app/zcash-android-welding/src/main/java/cash/z/wallet/sdk/jni/: JniConverter.kt
zcash-android-wallet-app/zcash-android-welding/src/main/proto/: WalletData.proto
zcash-android-wallet-app/zcash-android-welding/src/main/res/values/: strings.xml
zcash-android-wallet-app/zcash-android-welding/src/main/rust/: lib.rs
zcash-android-wallet-app/zcash-android-welding/src/test/java/cash/z/wallet/sdk/: ExampleUnitTest.java
zcash-android-wallet-sdk/: README.md
zcash-android-wallet-sdk-poc/: .gitrepo  build-rust.sh  build.gradle  build.gradle.kts
zcash-android-wallet-sdk-poc/.cargo/: config
zcash-android-wallet-sdk-poc/src/main/: AndroidManifest.xml
zcash-android-wallet-sdk-poc/src/main/rust/: Cargo.toml  lib.rs
(+193 files in other folders)
